2010-05-27  Kwang Yul Seo  <skyul@company100.net>

Reviewed by Xan Lopez.

        [GTK] writeToFile fails when length is large
        https://bugs.webkit.org/show_bug.cgi?id=39666

        writeToFile forgot to increment data pointer.

        * platform/gtk/FileSystemGtk.cpp:
        (WebCore::writeToFile):

Canonical link: https://commits.webkit.org/51337@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@60286 268f45cc-cd09-0410-ab3c-d52691b4dbfc